k8s/ingress/ingress-cliente-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliente-web-ingress
  namespace: storeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cliente-web
                port:
                  number: 80
