k8s/ingress/ingress-compras.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compras-ingress
  namespace: storeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /compras(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: compras
                port:
                  number: 80
